--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
+set( CMAKE_EXPORT_COMPILE_COMMANDS 1)
 
 # add prefix to every string in a variable
 FUNCTION(PREPEND var prefix)
@@ -67,23 +68,24 @@ set(XENOMAI_LINK_LIB native rtdm xenomai)
 set(ETHERLAB_INCL_DIR "/opt/etherlab/include")
 set(ETHERLAB_LINK_DIR "/opt/etherlab/lib")
 set(ETHERLAB_LINK_LIB ethercat rt)
-set(XSENS_INCL_DIR "/usr/Aris_Dependent/xsens/include")
-set(XSENS_LINK_LIB xdeviceclass xcommunication xstypes)
-set(XSENS_LINK_DIR "/usr/Aris_Dependent/xsens/lib")
+set(XSENS_INCL_DIR "/usr/IMU/include")
+set(XSENS_LINK_LIB IMU xcommunication xstypes)
+set(XSENS_LINK_DIR "/usr/IMU/lib")
 set(XNNITE_INCL_DIR "/usr/include/nite")#Driver for kinect
 set(XNNITE_LINK_DIR "/usr/lib")
 set(XNNITE_LINK_LIB )
 set(OPENNI_INCL_DIR "/usr/include/ni")#open NI for kinect
 set(OPENNI_LINK_DIR "/usr/lib")
 set(OPENNI_LINK_LIB OpenNI)
-set(ARIS_INCL_DIR "/usr/aris/include")
-set(ARIS_LINK_DIR "/usr/aris/lib")
+set(ARIS_INCL_DIR "/usr/aris2/include")
+set(ARIS_LINK_DIR "/usr/aris2/lib")
 set(ARIS_LINK_LIB aris_server aris_sensor aris_dynamic aris_control aris_core)
-set(ROBOTS_INCL_DIR "/usr/Robots/include")
-set(ROBOTS_LINK_DIR "/usr/Robots/lib")
+set(ROBOTS_INCL_DIR "/usr/Robots2/include")
+set(ROBOTS_LINK_DIR "/usr/Robots2/lib")
 set(ROBOTS_LINK_LIB Robot_Type_I Robot_Type_II Robot_Base)
+set(EIGEN_INCL_DIR "/usr/local/include/eigen3")
 
-set(ALL_INCL_DIR ${ROBOTS_INCL_DIR} ${ARIS_INCL_DIR} ${OPENNI_INCL_DIR} ${XNNITE_INCL_DIR} ${XSENS_INCL_DIR} ${ETHERLAB_INCL_DIR} ${XENOMAI_INCL_DIR} ${GENERAL_INCL_DIR})
+set(ALL_INCL_DIR ${ROBOTS_INCL_DIR} ${ARIS_INCL_DIR} ${OPENNI_INCL_DIR} ${XNNITE_INCL_DIR} ${XSENS_INCL_DIR} ${ETHERLAB_INCL_DIR} ${XENOMAI_INCL_DIR} ${GENERAL_INCL_DIR} ${EIGEN_INCL_DIR})
 set(ALL_LINK_DIR ${ROBOTS_LINK_DIR} ${ARIS_LINK_DIR} ${OPENNI_LINK_DIR} ${XNNITE_LINK_DIR} ${XSENS_LINK_DIR} ${ETHERLAB_LINK_DIR} ${XENOMAI_LINK_DIR})
 set(ALL_LINK_LIB ${ROBOTS_LINK_LIB} ${ARIS_LINK_LIB} ${OPENNI_LINK_LIB} ${XNNITE_LINK_LIB} ${XSENS_LINK_LIB} ${ETHERLAB_LINK_LIB} ${XENOMAI_LINK_LIB} ${SYSTEM_LINK_LIB})
 endif(UNIX)
@@ -109,14 +111,17 @@ include_directories(${ALL_INCL_DIR})
 link_directories(${ALL_LINK_DIR})
 
 ################################### build server ####################################
-set(SOURCE_FILES main.cpp Move_Gait.cpp)
-PREPEND(FULL_SRC Server ${SOURCE_FILES})
+set(SOURCE_FILES main.cpp NormalWalkWrapper.cpp NormalWalk.cpp)
+PREPEND(FULL_SRC "Server" ${SOURCE_FILES})
 add_executable(Server ${FULL_SRC})
 target_link_libraries(Server ${ALL_LINK_LIB})
 
 ################################### build client ####################################
 add_executable(rbt Client/client.cpp)
 target_link_libraries(rbt ${ALL_LINK_LIB})
+
+# additional tests
+add_executable(TestGaitGeneration Server/TestGaitMain.cpp Server/NormalWalk.cpp)
 
 ################################### install ####################################
 if(UNIX)
@@ -127,3 +132,4 @@ if(WIN32)
 endif(WIN32)
 
 install(TARGETS Server rbt RUNTIME DESTINATION bin)
+
